# cookiemonster

./: .gitignore  .gitmodules  Dockerfile  README.md  comments.txt  pyproject.toml  questions.txt
.github/workflows/: docker-image.yml
chromium-prototype/: README.md
config/: bias.json  config.json
cookiemonster/: README.md  aggregation_policy.py  aggregation_service.py  attribution.py  bias.py  budget_accountant.py  dataset.py  epsilon_calculator.py  event_logger.py  events.py  query_batch.py  report.py  run_evaluation.py  user.py  utils.py
cookiemonster/budget/: __init__.py  budget.py
cookiemonster/config/: config.json
cookiemonster/cookiemonster/: budget_accountant.py  dataset.py  epsilon_calculator.py  event_logger.py  run_evaluation.py  user.py  utils.py
cookiemonster/experiments/: ray_runner.py  runner.cli.py
cookiemonster/notebooks/: analysis.ipynb  three_advertisers.ipynb  utils.py
criteo/: create_dataset.py  criteo_conversion_search_data.ipynb
data/criteo/: config.json  create_dataset.py
data/microbenchmark/: bias.json  config.json  create_dataset.py  synthetic.ipynb
data/patcg/: README.md  config.json  convert_to_csv.py  create_dataset.py  download_data.py  filter_converters.py  (+2 more)
demo/: README.md  firebase.json  package-lock.json  package.json
demo-scraper/: demo_scraper.py
demo/demo-scraper/: README.md  demo_scraper.py  dotenv  pyproject.toml
depot_tools/: python3_bin_reldir.txt
evaluation/: budget_accountant.py  dataset.py  evaluation.py  events.py  report.py  run_evaluation.py  user.py  utils.py
experiments/: ray_runner.py  run_all.sh  runner.cli.py
notebooks/: accuracy_epsilon.ipynb  analysis.ipynb  bias_data.ipynb  criteo_analysis.ipynb  criteo_camera_ready.ipynb  criteo_dataset_analysis.ipynb  criteo_results_analysis.ipynb  microbenchmark_analysis.ipynb  patcg_analysis.ipynb  patcg_camera_ready_changes.ipynb  utils.py
packaging/: create_benchmarks.sh
plotting/: criteo_plot.py  macros.py  microbenchmark_plot.py  patcg_plot.py  plot_template.py
(+124 files in other folders)
