[tool.poetry]
name = "adsprivate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
modin = {extras = ["ray"], version = "^0.28.0"}
typer = "^0.9.0"
loguru = "^0.7.2"
omegaconf = "^2.3.0"
black = "^24.2.0"
termcolor = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
