[tool.poetry]
name = "cookiemonster"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
modin = { extras = ["ray"], version = "^0.28.0" }
typer = "^0.9.0"
loguru = "^0.7.2"
omegaconf = "^2.3.0"
black = "^24.2.0"
termcolor = "^2.4.0"
rich = "^13.7.1"
plotly = "^5.19.0"
matplotlib = "^3.8.3"
nbclean = "^0.3.2"
nb-clean = "^3.2.0"
kaleido = "0.2.1"
numpy = "^1.26.4"
notebook = "^7.1.2"
jupyter = "^1.0.0"
prtpy = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
