[tool.poetry]
name = "demo_scraper"
version = "0.1.0"
description = "web scraper of the attribution reporting demo"
authors = ["Peter McNeely <pm3186@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
